--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         #qr-content {
             position: fixed;
-            bottom: 10px;
+            top: 10px;
             left: 50%;
             transform: translateX(-50%);
             background-color: rgba(255, 255, 255, 0.8);
@@ -44,7 +44,7 @@
         <video id="preview" autoplay playsinline></video>
     </div>
 
-    <!-- Display scanned content and debug information at the bottom -->
+    <!-- Display scanned content and debug information at the top -->
     <div id="qr-content"></div>
 
     <script src="https://raw.githubusercontent.com/mebjas/html5-qrcode/master/minified/html5-qrcode.min.js"></script>
