--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
             width: 100%;
             max-width: 300px;
             height: 300px;
-            background-color: #fff;
-            border: 2px solid #333;
-            border-radius: 10px;
             overflow: hidden;
         }
 
@@ -71,7 +68,7 @@
                         // Display scanned content
                         qrContent.innerText = `Scanned Content: ${qrCodeMessage}`;
 
-                        // Optionally, check if the scanned content is a link
+                        // Check if the scanned content is a link
                         if (qrCodeMessage.toLowerCase().startsWith('http') || qrCodeMessage.toLowerCase().startsWith('https')) {
                             // Redirect to the scanned link
                             window.location.href = qrCodeMessage;
