--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 document.getElementById('preview').srcObject = stream;
 
                 // Initialize QR code scanner
-                const html5QrCode = new Html5Qrcode("preview");
+                const html5QrCode = new Html5Qrcode("reader");
 
                 // Register callback for successful decoding
                 html5QrCode.start(
