--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             padding: 10px;
             border-radius: 10px;
             white-space: pre-line;
+            border-redius: 40px;
         }
     </style>
 </head>
@@ -42,7 +43,7 @@
     </div>
 
 
-    <script src="https://raw.githubusercontent.com/mebjas/html5-qrcode/master/minified/html5-qrcode.min.js"></script>
+    <script src="https://unpkg.com/html5-qrcode" type="text/javascript">
     <script>
         document.addEventListener('DOMContentLoaded', (event) => {
             // Access the user's camera with rear-facing preference
