--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     </div>
 
 
-    <script src="https://unpkg.com/html5-qrcode" type="text/javascript">
+    <script src="https://raw.githubusercontent.com/mebjas/html5-qrcode/master/minified/html5-qrcode.min.js"></script>
+
     <script>
         document.addEventListener('DOMContentLoaded', (event) => {
             // Access the user's camera with rear-facing preference
