--- a/index.html
+++ b/index.html
@@ -56,6 +56,19 @@
             .then(function (stream) {
                 document.getElementById('preview').srcObject = stream;
 
+                Html5Qrcode.getCameras().then(devices => {
+                  /**
+                   * devices would be an array of objects of type:
+                   * { id: "id", label: "label" }
+                   */
+                  if (devices && devices.length) {
+                    var cameraId = devices[0].id;
+                    // .. use this to start scanning.
+                  }
+                }).catch(err => {
+                  // handle err
+                });
+
                 // Create instance of the object. The only argument is the "id" of HTML element created above.
                 const html5QrCode = new Html5Qrcode("reader");
                 
