--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Code Scanner</title>
+    <title>Rear Camera QR Code Scanner</title>
 
     <style>
         body {
@@ -34,17 +34,34 @@
         document.addEventListener('DOMContentLoaded', (event) => {
             const qrCodeReader = new Html5Qrcode("reader");
 
-            qrCodeReader.start(
-                { fps: 20, qrbox: 250 },
-                (message) => {
-                    // Handle the scanned QR code message
-                    alert(`Scanned QR Code: ${message}`);
+            // Constraints to open the rear camera in "environment" mode
+            const constraints = {
+                video: {
+                    facingMode: { exact: 'environment' },
                 },
-                (error) => {
-                    // Handle errors during QR code scanning
-                    console.error(`QR Code scanning error: ${error}`);
-                }
-            );
+            };
+
+            navigator.mediaDevices.getUserMedia(constraints)
+                .then((stream) => {
+                    // Set the camera stream as the source for the QR code scanner
+                    qrCodeReader.setCameraStream(stream);
+
+                    qrCodeReader.start(
+                        { fps: 10, qrbox: 250 },
+                        (message) => {
+                            // Handle the scanned QR code message
+                            alert(`Scanned QR Code: ${message}`);
+                        },
+                        (error) => {
+                            // Handle errors during QR code scanning
+                            console.error(`QR Code scanning error: ${error}`);
+                        }
+                    );
+                })
+                .catch((error) => {
+                    // Handle errors when accessing the camera
+                    console.error(`Error accessing rear camera: ${error}`);
+                });
 
             // Stop the scanner when the user leaves the page
             window.addEventListener('beforeunload', () => {
