--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
               qrbox: {width: 100, height: 100},
               rememberLastUsedCamera: true,
               // Only support camera scan type.
+              supportedScanTypes: [0]
             };
             const qrCodeReader = new Html5Qrcode("reader", config);
 
