--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <!-- Placeholder element for the QR code scanner -->
     <div id="reader"></div>
-
+    <script src="https://unpkg.com/html5-qrcode"></script>
     <script src="https://raw.githubusercontent.com/mebjas/html5-qrcode/master/minified/html5-qrcode.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', (event) => {
