--- a/index.html
+++ b/index.html
@@ -28,40 +28,28 @@
 <body>
     <!-- Placeholder element for the QR code scanner -->
     <div id="reader"></div>
+
+    <div id="qr-reader" style="width:500px"></div>
+    <div id="qr-reader-results"></div>
     <script src="https://unpkg.com/html5-qrcode"></script>
     <script src="https://raw.githubusercontent.com/mebjas/html5-qrcode/master/minified/html5-qrcode.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', (event) => {
-
-            let config = {
-              fps: 10,
-              qrbox: {width: 100, height: 100},
-              rememberLastUsedCamera: true,
-              // Only support camera scan type.
-              supportedScanTypes: [0]
-            };
-            const qrCodeReader = new Html5Qrcode("reader", config);
-
-            qrCodeReader.start(
-                config,
-                (message) => {
-                    // Handle the scanned QR code message
-                    alert(`Scanned QR Code: ${message}`);
-                },
-                (error) => {
-                    // Handle errors during QR code scanning
-                    console.error(`QR Code scanning error: ${error}`);
-                }
-            );
-
-            // Stop the scanner when the user leaves the page
-            window.addEventListener('beforeunload', () => {
-                qrCodeReader.stop().then(() => {
-                    console.log('QR Code scanner stopped.');
-                }).catch((error) => {
-                    console.error('Error stopping QR Code scanner:', error);
-                });
-            });
+        var resultContainer = document.getElementById('qr-reader-results');
+        var lastResult, countResults = 0;
+        
+        function onScanSuccess(decodedText, decodedResult) {
+            if (decodedText !== lastResult) {
+                ++countResults;
+                lastResult = decodedText;
+                // Handle on success condition with the decoded message.
+                console.log(`Scan result ${decodedText}`, decodedResult);
+            }
+        }
+        
+        var html5QrcodeScanner = new Html5QrcodeScanner(
+            "qr-reader", { fps: 10, qrbox: 250 });
+        html5QrcodeScanner.render(onScanSuccess);
         });
     </script>
 </body>
