--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
     <style>
-        /* Ensure the scanner fills the entire screen */
+        /* Full-screen setup for the QR scanner */
         body, html {
             margin: 0;
             padding: 0;
             height: 100%;
+            width: 100%;
             overflow: hidden;
+            background-color: #000;
         }
         #qr-reader {
             width: 100%;
@@ -22,25 +24,25 @@
     <script>
         function onScanSuccess(decodedText, decodedResult) {
             alert(`Scanned text: ${decodedText}`);
-            // Optionally, clear the scanner.
-            html5QrcodeScanner.clear();
+            window.location.reload();
         }
 
         function onScanFailure(error) {
-            // Handle scan failure (optional)
+            // Handle scan failure
+            console.error(`QR Code scanning failed: ${error}`);
         }
 
         let html5QrcodeScanner = new Html5Qrcode("qr-reader");
         html5QrcodeScanner.start(
-            { facingMode: "environment" }, // Use the rear-facing camera
+            { facingMode: "environment" },
             {
                 fps: 10,
-                qrbox: { width: "100%", height: "100%" }
+                qrbox: window.innerWidth > window.innerHeight ? { width: window.innerHeight, height: window.innerHeight } : { width: window.innerWidth, height: window.innerWidth }
             },
             onScanSuccess,
             onScanFailure
         ).catch(err => {
-            console.error(err);
+            console.error(`Error starting QR scanner: ${err}`);
         });
     </script>
 </body>
