--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <style>
-        /* Full-screen setup for the QR scanner */
         body, html {
             margin: 0;
             padding: 0;
@@ -14,16 +13,29 @@
         #qr-reader {
             width: 100%;
             height: 100%;
+            position: relative;
+        }
+        #overlay {
+            position: absolute;
+            top: 20%;
+            left: 20%;
+            width: 60%;
+            height: 60%;
+            border: 5px solid transparent;
+            box-sizing: border-box;
         }
     </style>
     <script src="https://unpkg.com/html5-qrcode"></script>
 </head>
 <body>
-    <div id="qr-reader"></div>
+    <div id="qr-reader">
+        <div id="overlay"></div>
+    </div>
     <script>
         let html5QrcodeScanner;
 
         function onScanSuccess(decodedText, decodedResult) {
+            document.getElementById('overlay').style.border = '5px solid green';
             alert(`Scanned text: ${decodedText}`);
             resetScanner();
         }
@@ -36,6 +48,7 @@
             if (html5QrcodeScanner) {
                 html5QrcodeScanner.clear().then(() => {
                     startScanner();
+                    document.getElementById('overlay').style.border = '5px solid transparent';
                 }).catch(err => {
                     console.error(`Failed to clear the QR Scanner: ${err}`);
                 });
