--- a/index.html
+++ b/index.html
@@ -2,78 +2,53 @@
 <html>
 <head>
     <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            overflow: hidden;
-            background-color: #000;
-        }
-        #qr-reader {
+        /* Existing styles... */
+        #modal {
+            display: none;
+            position: fixed;
+            left: 0;
+            top: 0;
             width: 100%;
             height: 100%;
-            position: relative;
-        }
-        #overlay {
-            position: absolute;
-            top: 20%;
-            left: 20%;
-            width: 60%;
-            height: 60%;
-            border: 5px solid transparent;
-            box-sizing: border-box;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            z-index: 1000;
         }
     </style>
-    <script src="https://unpkg.com/html5-qrcode"></script>
 </head>
 <body>
     <div id="qr-reader">
         <div id="overlay"></div>
     </div>
+    <div id="modal">
+        <div>
+            <p id="scanned-text">Scanned text will appear here</p>
+            <button onclick="closeModal()">Close</button>
+        </div>
+    </div>
     <script>
-        let html5QrcodeScanner;
+        // JavaScript code...
 
         function onScanSuccess(decodedText, decodedResult) {
             document.getElementById('overlay').style.border = '5px solid green';
-            alert(`Scanned text: ${decodedText}`);
+            document.getElementById('scanned-text').innerText = `Scanned text: ${decodedText}`;
+            showModal();
+        }
+
+        function showModal() {
+            document.getElementById('modal').style.display = 'flex';
+        }
+
+        function closeModal() {
+            document.getElementById('modal').style.display = 'none';
             resetScanner();
         }
 
-        function onScanFailure(error) {
-            console.error(`QR Code scanning failed: ${error}`);
-        }
-
-        function resetScanner() {
-            if (html5QrcodeScanner) {
-                html5QrcodeScanner.clear().then(() => {
-                    startScanner();
-                    document.getElementById('overlay').style.border = '5px solid transparent';
-                }).catch(err => {
-                    console.error(`Failed to clear the QR Scanner: ${err}`);
-                });
-            }
-        }
-
-        function startScanner() {
-            html5QrcodeScanner = new Html5Qrcode("qr-reader");
-            html5QrcodeScanner.start(
-                { facingMode: "environment" },
-                {
-                    fps: 10,
-                    qrbox: window.innerWidth > window.innerHeight ? 
-                        { width: window.innerHeight, height: window.innerHeight } : 
-                        { width: window.innerWidth, height: window.innerWidth }
-                },
-                onScanSuccess,
-                onScanFailure
-            ).catch(err => {
-                console.error(`Error starting QR scanner: ${err}`);
-            });
-        }
-
-        // Initialize scanner on page load
-        window.addEventListener('load', startScanner);
+        // Rest of the JavaScript code...
     </script>
 </body>
 </html>
