--- a/index.html
+++ b/index.html
@@ -2,7 +2,28 @@
 <html>
 <head>
     <style>
-        /* Existing styles... */
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+            background-color: #000;
+        }
+        #qr-reader {
+            width: 100%;
+            height: 100%;
+            position: relative;
+        }
+        #overlay {
+            position: absolute;
+            top: 20%;
+            left: 20%;
+            width: 60%;
+            height: 60%;
+            border: 5px solid transparent;
+            box-sizing: border-box;
+        }
         #modal {
             display: none;
             position: fixed;
@@ -19,6 +40,7 @@
             z-index: 1000;
         }
     </style>
+    <script src="https://unpkg.com/html5-qrcode"></script>
 </head>
 <body>
     <div id="qr-reader">
@@ -31,7 +53,7 @@
         </div>
     </div>
     <script>
-        // JavaScript code...
+        let html5QrcodeScanner;
 
         function onScanSuccess(decodedText, decodedResult) {
             document.getElementById('overlay').style.border = '5px solid green';
@@ -39,16 +61,40 @@
             showModal();
         }
 
+        function onScanFailure(error) {
+            console.error(`QR Code scanning failed: ${error}`);
+        }
+
+        function resetScanner() {
+            if (html5QrcodeScanner) {
+                html5QrcodeScanner.clear().then(() => {
+                    startScanner();
+                    document.getElementById('overlay').style.border = '5px solid transparent';
+                }).catch(err => {
+                    console.error(`Failed to clear the QR Scanner: ${err}`);
+                });
+            }
+        }
+
+        function startScanner() {
+            html5QrcodeScanner = new Html5Qrcode("qr-reader");
+            html5QrcodeScanner.start(
+                { facingMode: "environment" },
+                {
+                    fps: 10,
+                    qrbox: window.innerWidth > window.innerHeight ? 
+                        { width: window.innerHeight, height: window.innerHeight } : 
+                        { width: window.innerWidth, height: window.innerWidth }
+                },
+                onScanSuccess,
+                onScanFailure
+            ).catch(err => {
+                console.error(`Error starting QR scanner: ${err}`);
+            });
+        }
+
         function showModal() {
             document.getElementById('modal').style.display = 'flex';
         }
 
-        function closeModal() {
-            document.getElementById('modal').style.display = 'none';
-            resetScanner();
-        }
-
-        // Rest of the JavaScript code...
-    </script>
-</body>
-</html>
+        function
