--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <style>
+        /* Full-screen setup for the QR scanner */
         body, html {
             margin: 0;
             padding: 0;
@@ -13,36 +14,18 @@
         #qr-reader {
             width: 100%;
             height: 100%;
-            position: relative;
-        }
-        #overlay {
-            position: absolute;
-            top: 20%;
-            left: 20%;
-            width: 60%;
-            height: 60%;
-            border: 5px solid transparent;
-            box-sizing: border-box;
         }
     </style>
     <script src="https://unpkg.com/html5-qrcode"></script>
 </head>
 <body>
-    <div id="qr-reader">
-        <div id="overlay"></div>
-    </div>
+    <div id="qr-reader"></div>
     <script>
         let html5QrcodeScanner;
 
         function onScanSuccess(decodedText, decodedResult) {
-            document.getElementById('overlay').style.border = '5px solid green';
-            showPopup(`Scanned text: ${decodedText}`);
+            alert(`Scanned text: ${decodedText}`);
             resetScanner();
-        }
-
-        function showPopup(scannedText) {
-            let popupWindow = window.open("", "_blank", "width=300,height=100");
-            popupWindow.document.write(`<p>${scannedText}</p><button onclick='window.close()'>Close</button>`);
         }
 
         function onScanFailure(error) {
@@ -53,7 +36,6 @@
             if (html5QrcodeScanner) {
                 html5QrcodeScanner.clear().then(() => {
                     startScanner();
-                    document.getElementById('overlay').style.border = '5px solid transparent';
                 }).catch(err => {
                     console.error(`Failed to clear the QR Scanner: ${err}`);
                 });
