--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
                 { facingMode: "environment" },
                 {
                     fps: 10,
-                    qrbox: window.innerWidth > window.innerHeight ? 
-                        { width: window.innerHeight, height: window.innerHeight } : 
-                        { width: window.innerWidth, height: window.innerWidth }
+                    qrbox : { width: 400, height: 150 }
                 },
                 onScanSuccess,
                 onScanFailure
