--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             if (scanningEnabled) {
                 scanningEnabled = false; // Disable further scanning
                 // Redirect to the scanned URL
-                window.location.href = decodedText;
+                window.location.href = decodedText + '&API_KEY=4a940fa92292facc178cc905ad6af77e';
             }
         }
 
