--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://unpkg.com/html5-qrcode"></script>
+    <script src="qr-scan.js"></script>
 </head>
   <body>
     <div id="qr-reader" style="width: 100%; height: 100%">
